--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="css/style.css">
     <title>Alex Kaplun JPJSD</title>
 </head>
-<body>
+<body style="display: flex; flex-direction: column; min-height: 100vh;">
     <header id="header">
         <div class="container">
             <div class="row">
@@ -25,7 +25,7 @@
         </container>
     </header>
     
-    <section>
+    <section style="flex: 1;">
         <div class="container" id="centralcont">
             <div class="row">
                 <div class="col-sm-2">
