--- a/index.html
+++ b/index.html
@@ -16,10 +16,12 @@
             <div class="row">
                 <div class="col-12 text-end">
                     <button id="sun" class="btn btn-outline-light"><i id='suntheme' class = "icon-sun"></i></button>
-                </div>
+                 </div>
                 
                 <div class="col-12">
+                    <h2 class = "text-center text-white vikingfont">PYTHON</h2>
                     <img src="img/face.jpg" alt="alex_img" class="alex_img img-fluid mx-auto d-block">
+                    <h2 class = "text-center text-white vikingfont">developer</h2>
                 </div>
              </div>
         </container>
@@ -30,33 +32,47 @@
             <div class="row">
                 <div class="col-sm-2">
                     <div class="row align-items-center justify-content-center">
-                        <button id='ab_but' type="button" class="btn btn-outline-dark mybtn btn-block vikingfont">About</button>
+                        <button id='about_but' type="button" class="btn btn-outline-dark mybtn btn-block vikingfont">About</button>
                     </div>
                     <div class="row align-items-center justify-content-center">
-                        <button id='ed_but' type="button" class="btn btn-outline-dark mybtn btn-block vikingfont">Education</button>
+                        <button id='education_but' type="button" class="btn btn-outline-dark mybtn btn-block vikingfont">Education</button>
                     </div>
                     <div class="row align-items-center justify-content-center">
-                        <button id='ex_but' type="button" class="btn btn-outline-dark mybtn btn-block vikingfont">Experience</button>
+                        <button id='experience_but' type="button" class="btn btn-outline-dark mybtn btn-block vikingfont">Experience</button>
                     </div>
                     <div class="row align-items-center justify-content-center">
-                        <button id='sk_but' type="button" class="btn btn-outline-dark mybtn btn-block vikingfont">Skills</button>
+                        <button id='skills_but' type="button" class="btn btn-outline-dark mybtn btn-block vikingfont">Skills</button>
                     </div>
                     <div class="row align-items-center justify-content-center">
-                        <button id='cs_but' type="button" class="btn btn-outline-dark mybtn btn-block vikingfont">Courses</button>
+                        <button id='certifications_but' type="button" class="btn btn-outline-dark mybtn btn-block vikingfont">Certificates</button>
                     </div>
                     <div class="row align-items-center justify-content-center">
-                        <button id='bk_but' type="button" class="btn btn-outline-dark mybtn btn-block vikingfont">Backgroung</button>
+                        <button id='background_but' type="button" class="btn btn-outline-dark mybtn btn-block vikingfont">Background</button>
                     </div>
                     <div class="row align-items-center justify-content-center">
-                        <button id='ln_but' type="button" class="btn btn-outline-dark mybtn btn-block vikingfont">Lang</button>
+                        <button id='languages_but' type="button" class="btn btn-outline-dark mybtn btn-block vikingfont">Lang</button>
                     </div>
                     <div class="row align-items-center justify-content-center">
-                        <button id='cn_but' type="button" class="btn btn-outline-dark mybtn btn-block vikingfont">Contact</button>
+                        <button id='contacts_but' type="button" class="btn btn-outline-dark mybtn btn-block vikingfont">Contact</button>
                     </div>
                 </div>
                 
                 <div class="col-sm-10">
-                    <h5 id="main_info"><img src="/img/JPJSD.png" class="img-fluid mx-auto d-block"></h5>
+                    <h5 id="main_info"><p class = "fs-3"> I repaired complex medical equipment. I had to use Raspberry
+                        on one of the devices. Read Learning Python, Programming Python
+                        5th Edition by Mark Lutz, 4 volumes. Wrote software for the device.
+                        Soon there was a need to optimize the work of the security system 
+                        database and provide data to local users, look to Github. Python 
+                        began to tighten me! Finished the course Beetroot Academy,
+                        in parallel, I have developed a robot device in the field of
+                        biochemistry (full development cycle), this robot was a 
+                        graduation project, look to Youtube. In fact BA gave me Python engineer dev
+                        skills. Thereafter Django 3.0 book, Dronov. After that Frontend JS, 
+                        DevOps AWS, S3 deploy, Herocu-django deploy projects to expand skills.
+                        You are looking at the result now. Also several projects on request. Now my direction
+                        is full stack samurai path, device control over sockets, web, eth. In search of interesting
+                        technology projects. From myself I can give a lot to the team and
+                        multiply my engineering skills in dev. See you…</p></h5>
                 </div>
             </div>
         </div>
